raffia/tests/error/scss/at-rule/forward/show-invalid.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `<number>`
  ┌─ show-invalid.scss:1:19
  │
1 │ @forward "a" show 1;
  │                   ^


